# nonlinear_dynamics

./: .gitignore  Cargo.toml
src/: analysis.rs  main.rs  ode.rs  plotting.rs  poincare.rs
